// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`PageLayout renders nothing when initializing 1`] = `
<div>
  <div>
    <div>
      [NAVIGATION]
    </div>
    <main
      class="relative mt-xl mx-md mb-md md:absolute md:m-0 md:inset-0"
    />
  </div>
</div>
`;

exports[`PageLayout renders the children when initialized 1`] = `
<div>
  <div>
    <div>
      [NAVIGATION]
    </div>
    <main
      class="relative mt-xl mx-md mb-md md:absolute md:m-0 md:inset-0"
    >
      <div>
        Hello World!
      </div>
    </main>
  </div>
</div>
`;
